# test-task-the-restaurant-menu

./: .envexample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
src/: settings.py
src/api/: main.py
src/api/di/: __init__.py
src/api/di/providers/: db.py  services.py
src/api/handlers/: __init__.py  dish.py  menu.py  submenu.py
src/api/handlers/menu/: dish.py  menu.py  submenu.py
src/api/handlers/requests/: menu.py
src/api/handlers/responses/: base.py  dish.py  exceptions.py  menu.py  submenu.py
src/core/: logging.py  settings.py
src/domain/common/dto/: base.py
src/domain/common/exceptions/: base.py  repo.py
src/domain/common/interfaces/: cache.py  tasks_sender.py  uow.py
src/domain/menu/dto/: dish.py  menu.py  submenu.py
src/domain/menu/exceptions/: dish.py  menu.py  submenu.py
src/domain/menu/interfaces/: tasks_sender.py  uow.py  usecases.py
src/domain/menu/schemas/: dish.py  menu.py  submenu.py
src/domain/menu/usecases/: dish.py  menu.py  submenu.py
src/domain/report/dto/: report.py
src/domain/report/exceptions/: report.py
src/domain/report/interfaces/: tasks_sender.py  uow.py  (+1 more)
src/infrastructure/db/: base.py  exception_mapper.py  uow.py
src/infrastructure/tasks_sender/: base.py
src/presentation/api/: asgi.py  main.py
src/presentation/celery/: app.py  tasks.py
tests/: conftest.py  mocks.py
tests/test_api/handlers/: test_report.py
tests/test_api/menu/: test_menu.py  test_submenu.py
tests/test_infrastructure/models/: test_models.py
(+31 files in other folders)
