[tool.poetry]
name = "dz1"
version = "0.1.0"
description = ""
authors = ["hhssome <artempavel-terehove@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = { extras = ["dotenv"], version = "^1.10.4" }
alembic = "^1.9.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
asyncpg = "^0.27.0"
orjson = "^3.8.5"
redis = "^4.4.2"
celery = "^5.2.7"
openpyxl = "^3.1.0"


[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
sqlalchemy2-stubs = "^0.0.2a31"
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
